buttoni su napravljeni koristeći button elemente

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
           </div>
           <div class="button-container">
-            <i class="fa-solid fa-chevron-left left-icon"></i>
-            <i class="fa-solid fa-chevron-right right-icon"></i>
+            <button class="left-button"></button>
+            <button class="right-button"></button>
           </div>
         </div>
 
