bolje imenvanje klasa, bolje razdvajanje koda

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     ></script>
     <title>Document</title>
   </head>
+
   <body class="container">
     <header><p>Header</p></header>
+
     <main>
       <div class="main-container">
         <div class="slider">
-          <div class="wrapper1 wrapper">
-            <div class="top-row row">
+          <div class="wrapper wrapper1">
+            <div class="row top-row">
               <img
                 src="./images/slider-image-5.jpg"
                 alt="image5"
@@ -44,8 +46,9 @@
               />
             </div>
           </div>
-          <div class="wrapper2 wrapper">
-            <div class="bot-row row">
+
+          <div class="wrapper wrapper2">
+            <div class="row bottom-row">
               <img
                 src="./images/slider-image-3.jpg"
                 alt="image3"
@@ -66,6 +69,7 @@
               />
             </div>
           </div>
+
           <div class="button-container">
             <button class="left-button"></button>
             <button class="right-button"></button>
@@ -83,6 +87,7 @@
         </div>
       </div>
     </main>
+
     <footer><p>Footer</p></footer>
   </body>
   <script src="app.js"></script>
