ubačen defer atribut, popravljeni header i footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   </head>
 
   <body class="container">
-    <header><p>Header</p></header>
+    <header>
+      <div class="box box1"></div>
+      <div class="box box2"></div>
+    </header>
 
     <main>
       <div class="main-container">
@@ -88,7 +91,7 @@
       </div>
     </main>
 
-    <footer><p>Footer</p></footer>
+    <footer></footer>
   </body>
-  <script src="app.js"></script>
+  <script src="app.js" defer></script>
 </html>
