slider nije više odječen u containeru, nema apsolutno pozicioniranih elemenata, popravljen izgled prema dizajnu u figmi

--- a/index.html
+++ b/index.html
@@ -14,70 +14,76 @@
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Slider</title>
   </head>
 
-  <body class="container">
-    <header>
+  <body>
+    <!-- header -->
+    <header class="container">
       <div class="box box1"></div>
       <div class="box box2"></div>
     </header>
 
-    <main>
+    <!-- main container -->
+
+    <main class="container">
       <div class="main-container">
+        <!-- slider -->
+
         <div class="slider">
-          <div class="wrapper wrapper1">
-            <div class="row top-row">
-              <img
-                src="./images/slider-image-5.jpg"
-                alt="image5"
-                class="lastClone"
-              />
-              <img src="./images/slider-image-7.jpg" alt="image7" />
-              <img src="./images/slider-image-6.jpg" alt="image6" />
-              <img src="./images/slider-image-9.jpg" alt="image9" />
-              <img src="./images/slider-image-8.jpg" alt="image8" />
-              <img
-                src="./images/slider-image-5.jpg"
-                alt="image5"
-                class="counter"
-              />
-              <img
-                src="./images/slider-image-7.jpg"
-                alt="image7"
-                class="firstClone"
-              />
-            </div>
+          <!-- top row slider -->
+
+          <div class="row top-row">
+            <img
+              src="./images/slider-image-5.jpg"
+              alt="image5"
+              class="lastClone"
+            />
+            <img src="./images/slider-image-7.jpg" alt="image7" />
+            <img src="./images/slider-image-6.jpg" alt="image6" />
+            <img src="./images/slider-image-9.jpg" alt="image9" />
+            <img src="./images/slider-image-8.jpg" alt="image8" />
+            <img
+              src="./images/slider-image-5.jpg"
+              alt="image5"
+              class="counter"
+            />
+            <img
+              src="./images/slider-image-7.jpg"
+              alt="image7"
+              class="firstClone"
+            />
           </div>
 
-          <div class="wrapper wrapper2">
-            <div class="row bottom-row">
-              <img
-                src="./images/slider-image-3.jpg"
-                alt="image3"
-                class="lastClone"
-              />
-              <img src="./images/slider-image-4.jpg" alt="image4" />
-              <img src="./images/slider-image-1.jpg" alt="image1" />
-              <img src="./images/slider-image-2.jpg" alt="image2" />
-              <img
-                src="./images/slider-image-3.jpg"
-                alt="image3"
-                class="counter"
-              />
-              <img
-                src="./images/slider-image-4.jpg"
-                alt="image4"
-                class="firstClone"
-              />
-            </div>
-          </div>
+          <!-- bottom row slider -->
 
-          <div class="button-container">
-            <button class="left-button"></button>
-            <button class="right-button"></button>
+          <div class="row bottom-row">
+            <img
+              src="./images/slider-image-3.jpg"
+              alt="image3"
+              class="lastClone"
+            />
+            <img src="./images/slider-image-4.jpg" alt="image4" />
+            <img src="./images/slider-image-1.jpg" alt="image1" />
+            <img src="./images/slider-image-2.jpg" alt="image2" />
+            <img
+              src="./images/slider-image-3.jpg"
+              alt="image3"
+              class="counter"
+            />
+            <img
+              src="./images/slider-image-4.jpg"
+              alt="image4"
+              class="firstClone"
+            />
+            <div class="button-container">
+              <button class="left-button"></button>
+              <button class="right-button"></button>
+            </div>
           </div>
         </div>
+
+        <!-- text container -->
 
         <div class="text">
           <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
@@ -91,7 +97,9 @@
       </div>
     </main>
 
-    <footer></footer>
+    <!-- footer -->
+
+    <footer class="container"></footer>
   </body>
   <script src="./js/main.js" defer></script>
 </html>
