dodane klase last i first, klikom na button se klase pomiču

--- a/index.html
+++ b/index.html
@@ -34,48 +34,24 @@
           <!-- top row slider -->
 
           <div class="row top-row">
-            <img
-              src="./images/slider-image-5.jpg"
-              alt="image5"
-              class="lastClone"
-            />
+            <img src="./images/slider-image-5.jpg" alt="image5" class="last" />
             <img src="./images/slider-image-7.jpg" alt="image7" />
             <img src="./images/slider-image-6.jpg" alt="image6" />
             <img src="./images/slider-image-9.jpg" alt="image9" />
             <img src="./images/slider-image-8.jpg" alt="image8" />
-            <img
-              src="./images/slider-image-5.jpg"
-              alt="image5"
-              class="counter"
-            />
-            <img
-              src="./images/slider-image-7.jpg"
-              alt="image7"
-              class="firstClone"
-            />
+            <img src="./images/slider-image-5.jpg" alt="image5" />
+            <img src="./images/slider-image-7.jpg" alt="image7" class="first" />
           </div>
 
           <!-- bottom row slider -->
 
           <div class="row bottom-row">
-            <img
-              src="./images/slider-image-3.jpg"
-              alt="image3"
-              class="lastClone"
-            />
+            <img src="./images/slider-image-3.jpg" alt="image3" class="last" />
             <img src="./images/slider-image-4.jpg" alt="image4" />
             <img src="./images/slider-image-1.jpg" alt="image1" />
             <img src="./images/slider-image-2.jpg" alt="image2" />
-            <img
-              src="./images/slider-image-3.jpg"
-              alt="image3"
-              class="counter"
-            />
-            <img
-              src="./images/slider-image-4.jpg"
-              alt="image4"
-              class="firstClone"
-            />
+            <img src="./images/slider-image-3.jpg" alt="image3" />
+            <img src="./images/slider-image-4.jpg" alt="image4" class="first" />
             <div class="button-container">
               <button class="left-button"></button>
               <button class="right-button"></button>
