dodan novi div bottom, button container prebačen van row containera

--- a/index.html
+++ b/index.html
@@ -44,14 +44,23 @@
           </div>
 
           <!-- bottom row slider -->
-
-          <div class="row bottom-row">
-            <img src="./images/slider-image-3.jpg" alt="image3" class="last" />
-            <img src="./images/slider-image-4.jpg" alt="image4" />
-            <img src="./images/slider-image-1.jpg" alt="image1" />
-            <img src="./images/slider-image-2.jpg" alt="image2" />
-            <img src="./images/slider-image-3.jpg" alt="image3" />
-            <img src="./images/slider-image-4.jpg" alt="image4" class="first" />
+          <div class="bottom">
+            <div class="row bottom-row">
+              <img
+                src="./images/slider-image-3.jpg"
+                alt="image3"
+                class="last"
+              />
+              <img src="./images/slider-image-4.jpg" alt="image4" />
+              <img src="./images/slider-image-1.jpg" alt="image1" />
+              <img src="./images/slider-image-2.jpg" alt="image2" />
+              <img src="./images/slider-image-3.jpg" alt="image3" />
+              <img
+                src="./images/slider-image-4.jpg"
+                alt="image4"
+                class="first"
+              />
+            </div>
             <div class="button-container">
               <button class="left-button"></button>
               <button class="right-button"></button>
